Fixed DateBox's shadow - not overlapped again.

--- a/src/style/ui-components/date-box.scss
+++ b/src/style/ui-components/date-box.scss
@@ -12,7 +12,6 @@
     box-sizing: border-box;
     height: $default-box-height;
     color: $default-font-color;
-    position: relative;
     
     input[type=text] {
         
@@ -69,6 +68,7 @@
     
     .date-box-content {
         position: absolute;
+
         z-index: 10;
         padding-top: 4px;
         display: none;
@@ -76,6 +76,7 @@
         border-top: none;
         left: -1px;
         right: -1px;
+        margin-top: 2px;
         background-color: white;
         border-bottom-left-radius: $default-border-radius;
         border-bottom-right-radius: $default-border-radius;
@@ -90,7 +91,6 @@
         
         
         & .date-box-content {
-            border-top: $defaultBorder;
             display: block;
             box-shadow: $default-box-shadow;
         }
